--- a/.config/ngrok/ngrok.yml
+++ b/.config/ngrok/ngrok.yml
@@ -7,5 +7,5 @@ web_addr: 127.0.0.1:4040
 web_allow_hosts:
   - localhost
 
-  # YOUR REPL URL EXAMPLE: https://f9d74caa-2f25-4dc1-8ae5-e5a0f672db39-00-2ju51o8qw2tef.picard.repl.co/
+  # YOUR REPL URL EXAMPLE: f9d74caa-2f25-4dc1-8ae5-e5a0f672db39-00-2ju51o8qw2tef.picard.repl.co (witout slashes or https://)
   - <YOUR REPL URL>
